Fix spacing on profile page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+.main {
+	display: grid;
+}
+
 .sidebar {
 	position: absolute;
 	top: 0;
