--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -78,7 +78,7 @@ span {
 
 .presentation {
 	width: 100%;
-	height: 50vh;
+	height: fit-content;
 	display: flex;
 }
 
